--- a/themes/bix/sass/_front-page.scss
+++ b/themes/bix/sass/_front-page.scss
@@ -1,4 +1,4 @@
-//Section 1
+//Section 1 Front Page
 .home-banner{
 	background: url(../../images/bix_book_homepage.png) no-repeat center top;
   background-size: cover;
@@ -60,173 +60,4 @@
   }
 }
 
-//Section 2 and 3 - Home page image and Quotes
-.quote-wrapper-front{
-  height: auto; 
-  .quote-img{
-    background: url(../../images/bix-homepage-ocean.png) no-repeat center top;
-    background-size: cover;
-    height: 250px;
-    overflow: hidden;
-    position: relative;
-  }
-  .quote-img-2 {
-   background: url(../../images/bix-homepage-business.png) no-repeat center top;
-    background-size: cover;
-    height: 250px;
-    overflow: hidden;
-    position: relative;
-  }
-  .quote-img:after, .quote-img-2:after{
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    content:" ";
-    bottom:0px;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 0 40px 12px;
-    border-color: transparent transparent #fcfcfc transparent;
-  }
-  .quote-wrapper-text{
-    text-align: center;
-    font-size: 20px;
-    padding: 30px 15px;
-  }
-  .quotes-text{
-    text-transform: uppercase;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 30px;
-  } 
-}
 
-//Section 4 - Home page - Read sample stories
-.sample-story-front{
-  height:250px;
-  background-color: $color__blue;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .btn-download{
-     @include btn;
-     padding: 8px 46px;
-  }
-}
-
-//Section 5 - About Bix summary
-.home-book{
-  margin-top: 20px;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  .book-logo{
-    max-width: 300px;
-    height: auto;
-  }
-  .home-book-text{
-    text-align: center;
-  }
-  .book-title{
-    text-transform: uppercase;
-    font-weight: normal;
-    font-family: $font__header;
-    letter-spacing: 1px;
-    font-size: 1.8rem;
-    color:$color__gray;
-    margin-bottom:0;
-    line-height: 0;
-  }
-  .book-subheading{
-    font-weight: 100;
-    padding: 5px 5px;
-    border-top: solid $color__gray 2px;
-    border-bottom: solid $color__gray 2px;
-    color: $color__gray;
-    font-size: .8rem;
-    margin-bottom: 0;
-  }
-  h3{
-    font-size: 1.3rem;
-    line-height: 0;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-bottom: 0;
-  }
-  p{
-    font-size: .8rem;
-    letter-spacing: .3px;
-    line-height: 10px;
-    span{
-      font-size: .6rem;
-      letter-spacing: .2px;
-    }
-  }
-  .book-summary{
-     padding:20px 40px;
-   div{
-      max-width: 500px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-    .bix-book-title{
-      width: 100%;
-      color:$color__orange;
-      border-bottom: solid 2px $color__orange;
-      border-top: solid 2px $color__orange;
-      font-size: 1.3rem;
-      letter-spacing: 1.4px;
-      padding:20px 0;
-      width: 300px;
-      text-align: center;
-    }
-    .summary-one{
-      display: none;
-    }
-
-    p{
-      font-family: $font__main;
-      font-size: 1rem;
-      line-height: 25px;
-      max-width: 450px;
-    }
-    .btn-discover{
-      @include btn;
-      padding: 10px 80px;
-    }
-  }
-}
-
-.home-author{
-  
-  div{
-    padding:20px 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .home-subheading{
-    width: 100%;
-    color:$color__orange;
-    border-bottom: solid 2px $color__orange;
-    border-top: solid 2px $color__orange;
-    font-size: 1.3rem;
-    letter-spacing: 1.4px;
-    padding:5px 0;
-    width: 300px;
-    text-align: center;
-    text-transform: uppercase;
-  }
-  .btn-explore{
-    @include btn;
-    padding: 10px 80px;
-  }
-}
