--- a/themes/bix/sass/_variables.scss
+++ b/themes/bix/sass/_variables.scss
@@ -31,6 +31,10 @@ $font__header: 'Titillium Web', sans-serif;
 $font-size__main: 18px;
 $font-size__header: 36px;
 
+//media queries
+$tablet: "(min-width: 600px)";
+$desktop: "(min-width: 1024px)";
+
 //Boiler Plate Styles
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
