--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -1010,66 +1010,67 @@ object {
   padding: 10px 80px; }
 
 .footer-content-area {
-<<<<<<< HEAD
-<<<<<<< 2a71e706f36685da746b27ea7fd1b6f6112516ec
-  background-color: #545454; }
-
-.footer-form {
-  display: -ms-flexbox;
-  -ms-flex-direction: column;
-  -ms-flex-wrap: nowrap;
-  background-color: #545454;
-  -ms-flex-pack: justify;
-  -ms-flex-align: center;}
-
+  background-color: #444444;
+  max-width: 1240px;
+  text-align: center;
+  overflow: hidden; }
 
 .footer-top {
+  text-align: left;
+  margin-left: 10%; }
+
+.footer-top h2 {
   font-family: "Titillium Web", sans-serif;
-  color: #ffffff; }
+  font-weight: 300;
+  color: #ffffff;
+  text-transform: uppercase; }
 
 .footer-top h1 {
   font-family: "Titillium Web", sans-serif;
-  color: #F9AC31; }
+  font-weight: 300;
+  color: #F9AC31;
+  text-transform: uppercase; }
 
-.footer-form input {
-  width: 60%;
+.form-position input {
+  width: 80%;
   border: #F9AC31 solid 2px;
   margin-bottom: 10px; }
 
-.footer-form textarea {
-  width: 60%;
-  height: 30vh;
+.form-position textarea {
+  margin-left: 1px;
+  width: 80%;
+  height: 40vh;
   border: #F9AC31 solid 2px; }
 
 .footer-form button {
-  width: 60%;
   color: #fff;
   text-decoration: none;
   border: solid #fff 2px;
-  border-radius: 20px;
+  border-radius: 30px;
   background-color: #70b3cb;
   font-weight: bold;
-  font-size: 16px; }
-
-.form-position {
-  -ms-flex-pack: center;
-      justify-content: center; }
+  font-size: 20px;
+  font-size: 12px;
+  width: 40%;
+  height: 4vh;
+  text-align: center; }
 
 .footer-orange {
   color: #F9AC31; }
 
+.icons {
+  height: 30px;
+  width: 30px;
+  border-radius: 90%;
+  border: 2px solid white;
+  color: #444444;
+  background-color: #ffffff; }
+
 .icons i {
-  color: #ffffff;
-  border-top: #F9AC31 2px solid;
-  border-bottom: #F9AC31 2px solid;
-  margin: 25px; }
+  background-color: #ffffff; }
 
 /* If you don't want the footer to be responsive, remove these media queries */
 @media all and (min-width: 600px) {
-  .footer-content-area {
-    -ms-flex-pack: justify;
-        justify-content: space-between; }
-
   .footer-form {
     max-width: none; }
   .footer-top {
@@ -1079,8 +1080,10 @@ object {
     margin: 0 auto; }
   .form-position {
     display: -ms-flexbox;
-    -ms-flex-direction: row;
-    -ms-flex-wrap: nowrap;
-    background-color: #545454;
-    -ms-flex-align: center;}
-      }
+    display: flex;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    font-weight: normal;
+    padding: 65px 15px 0 0;
+    width: 120px;
+    text-align: left; } }
