--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -1016,8 +1016,8 @@ object {
   overflow: hidden; }
 
 .footer-top {
-  text-align: left;
-  margin-left: 10%; }
+  margin-left: 10%;
+  text-align: left; }
 
 .footer-top h2 {
   font-family: "Titillium Web", sans-serif;
@@ -1042,7 +1042,7 @@ object {
   height: 40vh;
   border: #F9AC31 solid 2px; }
 
-.footer-form button {
+.form-position button {
   color: #fff;
   text-decoration: none;
   border: solid #fff 2px;
@@ -1058,32 +1058,12 @@ object {
 .footer-orange {
   color: #F9AC31; }
 
-.icons {
-  height: 30px;
-  width: 30px;
-  border-radius: 90%;
-  border: 2px solid white;
-  color: #444444;
-  background-color: #ffffff; }
-
-.icons i {
-  background-color: #ffffff; }
-
-/* If you don't want the footer to be responsive, remove these media queries */
 @media all and (min-width: 600px) {
   .footer-form {
-    max-width: none; }
-  .footer-top {
-    text-align: left;
-    line-height: 1.5;
-    padding-left: 10px;
-    margin: 0 auto; }
-  .form-position {
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-direction: column;
-        flex-direction: column;
-    font-weight: normal;
-    padding: 65px 15px 0 0;
-    width: 120px;
-    text-align: left; } }
+    -ms-flex-direction: row;
+        flex-direction: row;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+    padding: 5%; } }
