--- a/themes/bix/sass/_navigation.scss
+++ b/themes/bix/sass/_navigation.scss
@@ -143,7 +143,7 @@
 		position: relative;
 		align-items: center;
 		justify-content: space-between;
-		border-bottom: solid 1px lighten($color__orange, 30%);
+		border-bottom: solid 1px rgba(0,0,0,0.5);
 		position: fixed;
 		width: 100vw;
 		max-width: 100%;
@@ -252,12 +252,13 @@
 		display: flex;
 		position: relative;
 		align-items: center;
-		border-bottom: solid 1px lighten($color__orange, 30%);
+		border-bottom: solid 1px rgba(0,0,0,0.2);
 		position: fixed;
 		width: 100vw;
 		max-width: 100%;
 		z-index: 1;
-		background: white;
+		transition: 1s;
+		background: rgba(255,255,255,1);
 	}
 
 	.logo-link {
@@ -270,6 +271,11 @@
 		img {
 			height: 40px;
 			margin: 13px 0;
+		}
+		&:hover {
+			transition: 1s;
+			border-color: $color__orange;
+			color: $color__orange;
 		}
 	}
 
@@ -293,7 +299,7 @@
 			margin: 0;
 			list-style: none;
 			text-align: center;
-			background: white;
+			transition: 1s;
 			li:first-child {
 				display: none;
 			}
@@ -317,6 +323,13 @@
 					color: $color__blue;
 					text-transform: uppercase;
 				}
+
+				&:hover {
+					transition: 1s;
+					border-color: $color__orange;
+					a{transition: 1s; color: $color__orange;}
+					
+				}
 			}
 			
 		}
@@ -326,7 +339,15 @@
 		color: $color__orange;
 		border-color: $color__orange;
 	}
+
+	.transparent-background {
+		transition: 1s;
+		background: rgba(255,255,255,0.95);
+	}
 }
+	
+
+
 
 // breakpoints
 
