--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -404,7 +404,7 @@ textarea {
         align-items: center;
     -ms-flex-pack: justify;
         justify-content: space-between;
-    border-bottom: solid 1px #fde8c6;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.5);
     position: fixed;
     width: 100vw;
     max-width: 100%;
@@ -493,11 +493,12 @@ textarea {
     position: relative;
     -ms-flex-align: center;
         align-items: center;
-    border-bottom: solid 1px #fde8c6;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.2);
     position: fixed;
     width: 100vw;
     max-width: 100%;
     z-index: 1;
+    transition: 1s;
     background: white; }
   .desktop-nav-wrapper .logo-link {
     -ms-flex: 0 0 25%;
@@ -513,6 +514,10 @@ textarea {
     .desktop-nav-wrapper .logo-link img {
       height: 40px;
       margin: 13px 0; }
+    .desktop-nav-wrapper .logo-link:hover {
+      transition: 1s;
+      border-color: #F9AC31;
+      color: #F9AC31; }
   .desktop-nav-wrapper .current-page {
     border-top: solid 10px #F9AC31; }
   .desktop-nav-wrapper .menu-main-menu-container {
@@ -531,7 +536,7 @@ textarea {
       margin: 0;
       list-style: none;
       text-align: center;
-      background: white; }
+      transition: 1s; }
       .desktop-nav-wrapper .menu-main-menu-container ul li:first-child {
         display: none; }
       .desktop-nav-wrapper .menu-main-menu-container ul li {
@@ -551,9 +556,18 @@ textarea {
           text-decoration: none;
           color: #70b3cb;
           text-transform: uppercase; }
+        .desktop-nav-wrapper .menu-main-menu-container ul li:hover {
+          transition: 1s;
+          border-color: #F9AC31; }
+          .desktop-nav-wrapper .menu-main-menu-container ul li:hover a {
+            transition: 1s;
+            color: #F9AC31; }
   .desktop-nav-wrapper ul li.current-menu-item a {
     color: #F9AC31;
     border-color: #F9AC31; }
+  .desktop-nav-wrapper .transparent-background {
+    transition: 1s;
+    background: rgba(255, 255, 255, 0.95); }
 
 @media all and (min-width: 600px) {
   .mobile-nav-wrapper {
