front-page responsive section2

--- a/themes/bix/sass/_front-section-five.scss
+++ b/themes/bix/sass/_front-section-five.scss
@@ -1,26 +1,41 @@
 .home-author{
-  
-  div{
-    padding:20px 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .home-subheading{
+  margin-bottom:0;
+  .author-img-wrapper{
     width: 100%;
-    color:$color__orange;
-    border-bottom: solid 2px $color__orange;
-    border-top: solid 2px $color__orange;
-    font-size: 1.3rem;
-    letter-spacing: 1.4px;
-    padding:5px 0;
-    width: 300px;
-    text-align: center;
-    text-transform: uppercase;
+    max-height: 400px;
+    overflow: hidden;
   }
-  .btn-explore{
-    @include btn;
-    padding: 10px 80px;
+.home-author-info{
+     padding:20px 40px;
+   div{
+      max-width: 500px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 0 auto;
+    }
+    .home-subheading{
+      width: 100%;
+      color:$color__orange;
+      border-bottom: solid 2px $color__orange;
+      border-top: solid 2px $color__orange;
+      font-size: 1.3rem;
+      letter-spacing: 1.4px;
+      padding:5px 0;
+      width: 300px;
+      text-align: center;
+    }
+    
+    p{
+      font-family: $font__main;
+      font-size: 1rem;
+      line-height: 25px;
+      max-width: 450px;
+    }
+    .btn-explore{
+      @include btn;
+      padding: 10px 80px;
+    }
   }
 }
