sass folder re-structure for media queries

--- a/themes/bix/sass/_variables.scss
+++ b/themes/bix/sass/_variables.scss
@@ -33,6 +33,7 @@ $font-size__header: 36px;
 
 //media queries
 $tablet: "(min-width: 600px)";
+$tablet-large: "(min-width: 900px)";
 $desktop: "(min-width: 1024px)";
 
 //Boiler Plate Styles
