--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -65,8 +65,9 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "general";
 @import "page-templates";
 @import "front-page";
-@import "front-section-two";
-@import "front-section-three";
-@import "front-section-four";
-@import "front-section-five";
+@import "front-sections/front-section-two";
+@import "front-sections/front-section-three";
+@import "front-sections/front-section-four";
+@import "front-sections/front-section-five";
 @import "footer";
+@import "media-queries";
