--- a/themes/bix/sass/_footer.scss
+++ b/themes/bix/sass/_footer.scss
@@ -45,15 +45,24 @@ margin-bottom: 10px;
  text-align: center;
  box-shadow: none;
  text-shadow: none;
+
 }
 
+.footer_button:hover {
+	box-shadow: none;
+	text-shadow: none;
+  border: 2px solid #fff;
+}
 
 
 .icons {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-}
+	margin-top: 3%;
+	margin-bottom: 1%;
+
+  }
 
 .icon-background {
     color: white;
@@ -69,10 +78,14 @@ margin-bottom: 10px;
 		 flex-direction: row;
 		 justify-content: space-between;
 		 padding: 5%;
+
 	 }
 
+  .form-position textarea {
+		height: 40vh;
+	}
 	 .icons {
 		  justify-content: flex-start;
-		 	margin-left: 15%
+		 	margin-left: 15%;
 	 }
 }
