--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -1143,13 +1143,20 @@ object {
   box-shadow: none;
   text-shadow: none; }
 
+.footer_button:hover {
+  box-shadow: none;
+  text-shadow: none;
+  border: 2px solid #fff; }
+
 .icons {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: row;
       flex-direction: row;
   -ms-flex-pack: center;
-      justify-content: center; }
+      justify-content: center;
+  margin-top: 3%;
+  margin-bottom: 1%; }
 
 .icon-background {
   color: white; }
@@ -1166,6 +1173,8 @@ object {
     -ms-flex-pack: justify;
         justify-content: space-between;
     padding: 5%; }
+  .form-position textarea {
+    height: 40vh; }
   .icons {
     -ms-flex-pack: start;
         justify-content: flex-start;
