add about page content, add scss file for about

--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -64,6 +64,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "media";
 @import "general";
 @import "page-templates";
+@import "about";
 @import "front-page";
 @import "footer";
 @import "media-queries";
