--- a/themes/bix/sass/front-sections/_front-section-two.scss
+++ b/themes/bix/sass/front-sections/_front-section-two.scss
@@ -14,6 +14,9 @@
     height: 250px;
     overflow: hidden;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .quote-img:after, .quote-img-2:after{
     position: absolute;
@@ -31,18 +34,45 @@
   }
   .quote-wrapper-text{
     text-align: center;
-    font-size: 20px;
     padding: 30px 15px;
   }
   .quotes-text{
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 1.1rem;
     font-weight: 500;
     line-height: 30px;
     max-width: 400px;
     margin: 0 auto;
   } 
+  .quotes-text-top{
+    margin-bottom: 15px;
+  }
 }
+//hover lay for images
+.quote-img,.quote-img-2{
+  .overlay{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(112,179,203,.8);
+      opacity: 0;
+      transition: opacity .3s ease;
+      .btn{
+         text-decoration: none;
+         background-color: transparent;
+         border-radius: 30px;
+         color: rgba(255,255,255,1);
+         border: solid rgba(255,255,255,1) 2px;
+         padding: 10px 20px;
+         font-weight: 500;
+         font-size: 1.1rem;
+         opacity: 0;
+         transition: opacity .3s ease;
+      }
+    }
+  }
 
 @media #{$tablet} {
   .quote-wrapper-front{
@@ -62,7 +92,7 @@
       margin:0;
       left: auto;
       right: 0;
-      bottom:110px;
+      bottom:calc(300px/2 - 40px);
       top: auto;
       width: 0;
       height: 0;
@@ -91,7 +121,7 @@
       margin:0;
       left: 0;
       right: auto;
-      bottom:110px;
+      bottom:calc(300px/2 - 40px);
       top: auto;
       width: 0;
       height: 0;
@@ -103,4 +133,107 @@
       width: 50%;
     }
   }
+
+//hover overlay for images
+.quote-img,.quote-img-2{
+  .overlay:hover{
+    opacity: 1;
+    .btn{
+    opacity: 1;
+      }
+    }
+  }
 }
+
+@media #{$tablet-large}{
+
+  .quote-wrapper-front{
+    margin-bottom: 80px;
+    margin-top: 80px;
+    .quote-img{
+      height: 400px;
+    }
+    .quote-img:after{
+      bottom:calc(400px/2 - 40px);
+    }
+
+  }
+  .quote-wrapper-front-2{
+    margin-bottom: 80px;
+    .quote-img-2{
+      height: 400px;
+    }
+    .quote-img-2:after{
+      bottom:calc(400px/2 - 40px);
+    }
+  }
+
+  .quote-wrapper-front,.quote-wrapper-front-2{
+    .quotes-text{
+      font-size: 1.3rem;
+      line-height: 30px;
+    } 
+  }
+  //hover overlay for images
+.quote-img,.quote-img-2{
+  .overlay{
+    .btn{
+        text-decoration: none;
+        background-color: transparent;
+        border-radius: 50px;
+        color: rgba(255,255,255,1);
+        border: solid rgba(255,255,255,1) 2px;
+        padding: 20px 80px;
+        font-weight: 500;
+        font-size: 1.5rem;
+      }
+    }
+  }
+}
+
+@media #{$desktop}{
+
+  .quote-wrapper-front{
+    margin-bottom: 100px;
+    margin-top: 100px;
+    .quote-img{
+      height: 450px;
+    }
+    .quote-img:after{
+      bottom:calc(450px/2 - 40px);
+    }
+    .quotes-text-top{
+      margin-bottom: 30px;
+    }
+  }
+  .quote-wrapper-front-2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items:center;
+    margin-bottom: 80px;
+    .quote-img-2{
+      height: 450px;
+    }
+    .quote-img-2:after{
+      bottom:calc(450px/2 - 40px);
+    }
+  }
+  .quote-wrapper-front,.quote-wrapper-front-2{
+    .quotes-text{
+      font-size: 1.5rem;
+      line-height: 40px;
+    } 
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
