--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -828,7 +828,7 @@ object {
     border-radius: 30px;
     background-color: #70b3cb;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1.1rem;
     padding: 8px 46px;
     margin-bottom: 30px; }
   .banner-info-wrapper .btn-down {
@@ -862,7 +862,13 @@ object {
     background-size: cover;
     height: 250px;
     overflow: hidden;
-    position: relative; }
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center; }
   .quote-wrapper-front .quote-img:after, .quote-wrapper-front .quote-img-2:after, .quote-wrapper-front-2 .quote-img:after, .quote-wrapper-front-2 .quote-img-2:after {
     position: absolute;
     margin-left: auto;
@@ -878,15 +884,40 @@ object {
     border-color: transparent transparent #fcfcfc transparent; }
   .quote-wrapper-front .quote-wrapper-text, .quote-wrapper-front-2 .quote-wrapper-text {
     text-align: center;
-    font-size: 20px;
     padding: 30px 15px; }
   .quote-wrapper-front .quotes-text, .quote-wrapper-front-2 .quotes-text {
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 1.1rem;
     font-weight: 500;
     line-height: 30px;
     max-width: 400px;
     margin: 0 auto; }
+  .quote-wrapper-front .quotes-text-top, .quote-wrapper-front-2 .quotes-text-top {
+    margin-bottom: 15px; }
+
+.quote-img .overlay, .quote-img-2 .overlay {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(112, 179, 203, 0.8);
+  opacity: 0;
+  transition: opacity .3s ease; }
+  .quote-img .overlay .btn, .quote-img-2 .overlay .btn {
+    text-decoration: none;
+    background-color: transparent;
+    border-radius: 30px;
+    color: white;
+    border: solid white 2px;
+    padding: 10px 20px;
+    font-weight: 500;
+    font-size: 1.1rem;
+    opacity: 0;
+    transition: opacity .3s ease; }
 
 @media (min-width: 600px) {
   .quote-wrapper-front {
@@ -909,7 +940,7 @@ object {
       margin: 0;
       left: auto;
       right: 0;
-      bottom: 110px;
+      bottom: calc(300px/2 - 40px);
       top: auto;
       width: 0;
       height: 0;
@@ -939,7 +970,7 @@ object {
       margin: 0;
       left: 0;
       right: auto;
-      bottom: 110px;
+      bottom: calc(300px/2 - 40px);
       top: auto;
       width: 0;
       height: 0;
@@ -947,7 +978,66 @@ object {
       border-width: 40px 0 40px 12px;
       border-color: transparent transparent transparent #ffffff; }
     .quote-wrapper-front-2 .quote-wrapper-text {
-      width: 50%; } }
+      width: 50%; }
+  .quote-img .overlay:hover, .quote-img-2 .overlay:hover {
+    opacity: 1; }
+    .quote-img .overlay:hover .btn, .quote-img-2 .overlay:hover .btn {
+      opacity: 1; } }
+
+@media (min-width: 900px) {
+  .quote-wrapper-front {
+    margin-bottom: 80px;
+    margin-top: 80px; }
+    .quote-wrapper-front .quote-img {
+      height: 400px; }
+    .quote-wrapper-front .quote-img:after {
+      bottom: calc(400px/2 - 40px); }
+  .quote-wrapper-front-2 {
+    margin-bottom: 80px; }
+    .quote-wrapper-front-2 .quote-img-2 {
+      height: 400px; }
+    .quote-wrapper-front-2 .quote-img-2:after {
+      bottom: calc(400px/2 - 40px); }
+  .quote-wrapper-front .quotes-text, .quote-wrapper-front-2 .quotes-text {
+    font-size: 1.3rem;
+    line-height: 30px; }
+  .quote-img .overlay .btn, .quote-img-2 .overlay .btn {
+    text-decoration: none;
+    background-color: transparent;
+    border-radius: 50px;
+    color: white;
+    border: solid white 2px;
+    padding: 20px 80px;
+    font-weight: 500;
+    font-size: 1.5rem; } }
+
+@media (min-width: 1024px) {
+  .quote-wrapper-front {
+    margin-bottom: 100px;
+    margin-top: 100px; }
+    .quote-wrapper-front .quote-img {
+      height: 450px; }
+    .quote-wrapper-front .quote-img:after {
+      bottom: calc(450px/2 - 40px); }
+    .quote-wrapper-front .quotes-text-top {
+      margin-bottom: 30px; }
+  .quote-wrapper-front-2 {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: row;
+        flex-direction: row;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+    -ms-flex-align: center;
+        align-items: center;
+    margin-bottom: 80px; }
+    .quote-wrapper-front-2 .quote-img-2 {
+      height: 450px; }
+    .quote-wrapper-front-2 .quote-img-2:after {
+      bottom: calc(450px/2 - 40px); }
+  .quote-wrapper-front .quotes-text, .quote-wrapper-front-2 .quotes-text {
+    font-size: 1.5rem;
+    line-height: 40px; } }
 
 .sample-story-front {
   height: 250px;
@@ -965,7 +1055,7 @@ object {
     border-radius: 30px;
     background-color: #70b3cb;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1.1rem;
     padding: 8px 46px; }
 
 .home-book {
@@ -1048,7 +1138,7 @@ object {
       border-radius: 30px;
       background-color: #70b3cb;
       font-weight: bold;
-      font-size: 20px;
+      font-size: 1.1rem;
       padding: 10px 80px; }
 
 .home-author {
@@ -1092,7 +1182,7 @@ object {
       border-radius: 30px;
       background-color: #70b3cb;
       font-weight: bold;
-      font-size: 20px;
+      font-size: 1.1rem;
       padding: 10px 80px; }
 
 .footer-content-area {
@@ -1135,7 +1225,7 @@ object {
   border-radius: 30px;
   background-color: #70b3cb;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1.1rem;
   font-size: 12px;
   width: 30%;
   height: 4vh;
