--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -18,12 +18,12 @@
 
 	.author-section-title {
 		background: rgba(0,0,0,0.35);
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		font-family: $font__header;
-		color: $color__gray;
 		h2 {
+			margin: 0;
+			padding: 1rem;
+			text-align: center;
+			font-family: $font__header;
+			color: $color__gray;
 			font-size: 18px;
 			text-transform: uppercase;
 		}
@@ -67,3 +67,106 @@
 
 // company section
 
+	.company-section {
+		min-width: 320px;
+	}
+
+	.company-section-title {
+		position: relative;
+		background: url(../../images/about-bickson2.png);
+		background-size: cover;
+		img {
+			visibility: hidden;
+		}
+		h2 {
+			top: 70%;
+			width: 100%;
+			position: absolute;
+			background: rgba(255,255,255,0.8);
+			margin: 0;
+			padding: 1rem;
+			text-align: center;
+			font-family: $font__header;
+			color: $color__gray;
+			font-size: 18px;
+			text-transform: uppercase;
+		}
+	}
+
+	.company-section-content-wrapper {
+		div {
+			margin: 1rem 2rem;
+			h3 {
+				font-family: $font__header;
+				color: $color__orange;
+				text-transform: uppercase;
+				font-weight: 300;
+			}
+			ul {
+				margin-top: 0;
+				padding: 0 1rem;
+
+				font-weight: 300;
+				display: flex;
+				flex-flow: column nowrap;
+				justify-content: center;
+				list-style: none;
+
+				li { line-height: 1.2rem;}
+
+				li:before {   
+				    content: "";  
+				    border-color: transparent $color__orange;  
+				    border-style: solid;  
+				    border-width: 0.35em 0 0.35em 0.45em;  
+				    display: block;  
+				    height: 0;  
+				    width: 0;  
+				    left: -1em;  
+				    top: 0.9em;  
+				    position: relative;  
+				} 
+			}
+			p {
+				font-weight: 300;
+				display: flex;
+				flex-flow: column nowrap;
+				justify-content: center;
+				span{
+					margin-bottom: 1rem;
+				}
+			}
+		}
+	}
+
+	.company-section-clients {
+		margin: 1rem 2rem;
+			h3 {
+				color: $color__orange;
+				text-align: center;
+				font-family: $font__header;
+				text-transform: uppercase;
+				font-weight: 300;
+			}
+		}
+
+	.company-section-website {
+		display: flex;
+		flex-flow: column nowrap;
+		align-items: center;
+		margin: 1rem 2rem;
+		h3 {
+			text-align: center;
+			font-family: $font__header;
+			text-transform: uppercase;
+			font-weight: 300;
+		}
+		.website-img-link {
+			border: solid 1px $color__blue;
+		}
+		.website-text-link {
+			font-family: $font__header;
+			text-decoration: none;
+			color: $color__blue;
+		}
+	}
