--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -784,16 +784,13 @@ strong {
   min-width: 320px; }
 
 .author-section-title {
-  background: rgba(0, 0, 0, 0.35);
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -ms-flex-align: center;
-      align-items: center;
-  font-family: "Titillium Web", sans-serif;
-  color: #444444; }
+  background: rgba(0, 0, 0, 0.35); }
   .author-section-title h2 {
+    margin: 0;
+    padding: 1rem;
+    text-align: center;
+    font-family: "Titillium Web", sans-serif;
+    color: #444444;
     font-size: 18px;
     text-transform: uppercase; }
 
@@ -829,6 +826,99 @@ strong {
         justify-content: center; }
     .author-section-content-wrapper div p span {
       margin-bottom: 1rem; }
+
+.company-section {
+  min-width: 320px; }
+
+.company-section-title {
+  position: relative;
+  background: url(../../images/about-bickson2.png);
+  background-size: cover; }
+  .company-section-title img {
+    visibility: hidden; }
+  .company-section-title h2 {
+    top: 70%;
+    width: 100%;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.8);
+    margin: 0;
+    padding: 1rem;
+    text-align: center;
+    font-family: "Titillium Web", sans-serif;
+    color: #444444;
+    font-size: 18px;
+    text-transform: uppercase; }
+
+.company-section-content-wrapper div {
+  margin: 1rem 2rem; }
+  .company-section-content-wrapper div h3 {
+    font-family: "Titillium Web", sans-serif;
+    color: #F9AC31;
+    text-transform: uppercase;
+    font-weight: 300; }
+  .company-section-content-wrapper div ul {
+    margin-top: 0;
+    padding: 0 1rem;
+    font-weight: 300;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: column nowrap;
+        flex-flow: column nowrap;
+    -ms-flex-pack: center;
+        justify-content: center;
+    list-style: none; }
+    .company-section-content-wrapper div ul li {
+      line-height: 1.2rem; }
+    .company-section-content-wrapper div ul li:before {
+      content: "";
+      border-color: transparent #F9AC31;
+      border-style: solid;
+      border-width: 0.35em 0 0.35em 0.45em;
+      display: block;
+      height: 0;
+      width: 0;
+      left: -1em;
+      top: 0.9em;
+      position: relative; }
+  .company-section-content-wrapper div p {
+    font-weight: 300;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: column nowrap;
+        flex-flow: column nowrap;
+    -ms-flex-pack: center;
+        justify-content: center; }
+    .company-section-content-wrapper div p span {
+      margin-bottom: 1rem; }
+
+.company-section-clients {
+  margin: 1rem 2rem; }
+  .company-section-clients h3 {
+    color: #F9AC31;
+    text-align: center;
+    font-family: "Titillium Web", sans-serif;
+    text-transform: uppercase;
+    font-weight: 300; }
+
+.company-section-website {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: column nowrap;
+      flex-flow: column nowrap;
+  -ms-flex-align: center;
+      align-items: center;
+  margin: 1rem 2rem; }
+  .company-section-website h3 {
+    text-align: center;
+    font-family: "Titillium Web", sans-serif;
+    text-transform: uppercase;
+    font-weight: 300; }
+  .company-section-website .website-img-link {
+    border: solid 1px #70b3cb; }
+  .company-section-website .website-text-link {
+    font-family: "Titillium Web", sans-serif;
+    text-decoration: none;
+    color: #70b3cb; }
 
 .home-banner {
   background: url(../../images/bix_book_homepage.png) no-repeat center top;
