--- a/themes/bix/sass/_navigation.scss
+++ b/themes/bix/sass/_navigation.scss
@@ -249,7 +249,7 @@
 		justify-content: center;
 		align-items: center;
 		position: fixed;
-		width: 100vw;
+		width: 100%;
 		background: rgba(255,255,255,1);
 		border-bottom: solid 1px rgba(0,0,0,0.2);
 		z-index: 1;
@@ -259,11 +259,9 @@
 	.main-navigation {
 		max-width: 1000px;
 		justify-content: center;
-		padding: 0 10px;
 
 		height: auto;
 		display: flex;
-		position: relative;
 		align-items: center;
 		
 		width: 100vw;
@@ -271,7 +269,7 @@
 
 	.logo-link {
 		flex: 0 0 25%;
-		border-top: solid 10px white;
+		border-top: solid 10px rgba(0,0,0,0);
 		height: auto;
 		display: flex;
 		align-items: center;
@@ -313,8 +311,8 @@
 			}
 
 			li {
-				flex: 0 0 33%;
-				border-top: solid 10px white;
+				flex: 0 0 33.3%;
+				border-top: solid 10px rgba(0,0,0,0);
 				text-align: center;
 				margin: 0;
 				padding: 17.5px 0;
