--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -491,7 +491,7 @@ textarea {
     -ms-flex-align: center;
         align-items: center;
     position: fixed;
-    width: 100vw;
+    width: 100%;
     background: white;
     border-bottom: solid 1px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -500,18 +500,16 @@ textarea {
     max-width: 1000px;
     -ms-flex-pack: center;
         justify-content: center;
-    padding: 0 10px;
     height: auto;
     display: -ms-flexbox;
     display: flex;
-    position: relative;
     -ms-flex-align: center;
         align-items: center;
     width: 100vw; }
   .desktop-nav-wrapper .logo-link {
     -ms-flex: 0 0 25%;
         flex: 0 0 25%;
-    border-top: solid 10px white;
+    border-top: solid 10px transparent;
     height: auto;
     display: -ms-flexbox;
     display: flex;
@@ -548,9 +546,9 @@ textarea {
       .desktop-nav-wrapper .menu-main-menu-container ul li:first-child {
         display: none; }
       .desktop-nav-wrapper .menu-main-menu-container ul li {
-        -ms-flex: 0 0 33%;
-            flex: 0 0 33%;
-        border-top: solid 10px white;
+        -ms-flex: 0 0 33.3%;
+            flex: 0 0 33.3%;
+        border-top: solid 10px transparent;
         text-align: center;
         margin: 0;
         padding: 17.5px 0; }
